--- a/LustreVerilog.cabal
+++ b/LustreVerilog.cabal
@@ -37,7 +37,9 @@ library
         Parsing.Ast,
         Typing.Ast,
         Typing.TypeError,
-        Typing.Environments
+        Typing.Environments,
+        Typing.Ids,
+        Typing.Unification
 
     other-extensions: Safe
 
@@ -74,32 +76,6 @@ executable LustreVerilog
 
     hs-source-dirs:   app
     default-language: Haskell2010
-
-test-suite UnitTest
-    import:           warnings
-    type:             exitcode-stdio-1.0
-    main-is:          Main.hs
-
-    -- Modules included in this executable, other than Main.
-    other-modules:
-        Parsing.ParserSpec
-
-    -- LANGUAGE extensions used by modules in this package.
-    -- other-extensions:
-
-    build-depends:
-        base ^>= 4.17.2.1,
-        hspec ^>= 2.11.9,
-        hspec-megaparsec ^>= 2.2.1,
-        megaparsec ^>= 9.6.1,
-        text ^>= 2.1.2,
-        LustreVerilog
-
-    hs-source-dirs:   test/unit/
-    default-language: Haskell2010
-    build-tool-depends:
-        hspec-discover:hspec-discover ^>= 2.11.9
-
 
 test-suite IntegTest
     import:           warnings
