--- a/LustreVerilog.cabal
+++ b/LustreVerilog.cabal
@@ -52,13 +52,13 @@ library
     other-extensions: Safe
 
     build-depends:
-        base ^>= 4.17.2.1,
-        text ^>= 2.1.2,
-        bytestring ^>= 0.11.5.3,
-        containers ^>= 0.7,
-        mtl ^>= 2.3.1,
-        megaparsec ^>= 9.6.1,
-        parser-combinators ^>= 1.3.0
+        base >= 4.15 && < 5,
+        bytestring >= 0.12.1 && < 0.13,
+        containers >= 0.7 && < 0.8,
+        megaparsec >= 9.7.0 && < 9.8,
+        mtl >= 2.3.1 && < 2.4,
+        text >= 2.1.1 && < 2.2,
+        parser-combinators >= 1.3.0 && < 1.4
 
     hs-source-dirs:   src
     default-language: Haskell2010
@@ -74,11 +74,11 @@ executable LustreVerilog
     other-extensions: Safe
 
     build-depends:
-        base ^>= 4.17.2.1,
-        text ^>= 2.1.2,
-        bytestring ^>= 0.11.5.3,
-        pretty-simple ^>= 4.1.2.0,
-        optparse-applicative ^>= 0.18.1.0,
+        base >= 4.15 && < 5,
+        bytestring >= 0.12.1 && < 0.13,
+        text >= 2.1.1 && < 2.2,
+        optparse-applicative >= 0.18.1 && < 0.19,
+        pretty-simple >= 4.1.3 && < 4.2,
         LustreVerilog
 
     hs-source-dirs:   app
@@ -96,8 +96,8 @@ test-suite IntegTest
     other-extensions: Safe
 
     build-depends:
-        base ^>= 4.17.2.1,
-        directory ^>= 1.3.9.0
+        base >= 4.15 && < 5,
+        directory >= 1.3
 
     hs-source-dirs:   test/integ
     default-language: Haskell2010
