--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        ghc-version: ['9.12', '9.10', '9.8', '9.6', '9.4', '9.2', '9.0']
+        ghc-version: ['9.10', '9.8', '9.6']
 
     steps:
       - uses: actions/checkout@v4
