--- a/LustreVerilog.cabal
+++ b/LustreVerilog.cabal
@@ -3,8 +3,8 @@ name:               LustreVerilog
 
 version:            0.1.0.0
 
--- synopsis:
--- description:
+synopsis:           A Lustre to Verilog Compiler
+description:        This package contains a Lustre to Verilog compiler.
 
 license:            GPL-3.0-or-later
 license-file:       LICENSE
@@ -16,14 +16,14 @@ maintainer:         gabriel@desfrene.fr
 category:           System
 build-type:         Simple
 
--- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
 extra-doc-files:    CHANGELOG.md
 
--- Extra source files to be distributed with the package, such as examples, or a tutorial module.
--- extra-source-files:
+source-repository head
+  type:     git
+  location: https://github.com/desfreng/LustreVerilog/
 
 common warnings
-    ghc-options: -Wall -Werror -Wextra
+    ghc-options: -Wall -Wextra
 
 library
     import:           warnings
@@ -52,7 +52,7 @@ library
     other-extensions: Safe
 
     build-depends:
-        base >= 4.15 && < 5,
+        base >= 4.18 && < 5,
         bytestring >= 0.12.1 && < 0.13,
         containers >= 0.7 && < 0.8,
         megaparsec >= 9.7.0 && < 9.8,
@@ -74,7 +74,7 @@ executable LustreVerilog
     other-extensions: Safe
 
     build-depends:
-        base >= 4.15 && < 5,
+        base >= 4.18 && < 5,
         bytestring >= 0.12.1 && < 0.13,
         text >= 2.1.1 && < 2.2,
         optparse-applicative >= 0.18.1 && < 0.19,
@@ -96,7 +96,7 @@ test-suite IntegTest
     other-extensions: Safe
 
     build-depends:
-        base >= 4.15 && < 5,
+        base >= 4.18 && < 5,
         directory >= 1.3
 
     hs-source-dirs:   test/integ
