--- a/verilog-test/Makefile
+++ b/verilog-test/Makefile
@@ -1,28 +1,33 @@
-MODULE=test
 TOP=top
+TOP_MODULE=main
+VERILOG_ARGS=--Mdir "obj_dir" --trace --x-assign unique --x-initial unique --timing
 
-ALL: build
+# ALL: build
 
-sim: waveform.vcd
-verilate: .stamp.verilate
-build: obj_dir/V$(MODULE)
+# sim-%: $*/wafeform
+# %-verilate: .stamp.verilate
+build-%: V%
+	@echo $@
 
-wave: waveform.vcd
-	gtkwave waveform.vcd
+# %-wave: waveform.vcd
+# gtkwave waveform.vcd
+V%:
+	@echo $@
 
-waveform.vcd: ./obj_dir/V$(TOP)
-	@./obj_dir/V$(TOP) +verilator+rand+reset+2
 
-./obj_dir/V$(TOP): .stamp.verilate
-	make -C obj_dir -f V$(TOP).mk V$(TOP)
+# waveform.vcd: ./obj_dir/V$(MODULE)
+# 	@./obj_dir/V$(MODULE) +verilator+rand+reset+2
 
-.stamp.verilate: $(TOP).v $(MODULE).v $(TOP).cpp
-	verilator --trace --x-assign unique --x-initial unique --top-module $(TOP) -cc $(TOP).v --exe $(TOP).cpp --timing
-	@touch .stamp.verilate
+# ./obj_dir/V%: .stamp.verilate.%
+# 	make -C obj_dir -f V$*.mk V$*
 
-clean:
-	rm -rf .stamp.*;
-	rm -rf ./obj_dir
-	rm -rf waveform.vcd
+# .stamp.verilate.%: %.v $(TOP).cpp
+# 	verilator $(VERILOG_ARGS) --prefix $* --top-module $(TOP_MODULE) -cc $*.v $(TOP).cpp
+# 	@touch .stamp.verilate.$*
 
-.PHONY: sim verilate build wave lint clean
+# clean:
+# 	rm -rf .stamp.*;
+# 	rm -rf ./obj_dir
+# 	rm -rf waveform.vcd
+
+# .PHONY: sim verilate build wave lint clean
