--- a/LustreVerilog.cabal
+++ b/LustreVerilog.cabal
@@ -16,7 +16,13 @@ maintainer:         gabriel@desfrene.fr
 category:           System
 build-type:         Simple
 
-extra-doc-files:    CHANGELOG.md
+extra-doc-files:
+    CHANGELOG.md
+    README.md
+
+-- STDLib
+data-dir:           stdlib
+data-files:         *.v
 
 source-repository head
   type:     git
@@ -39,6 +45,9 @@ library
         Commons.Tree,
         Commons.Types,
         Commons.TypingError,
+        Compiling.Ast,
+        Compiling.ToVerilog,
+        Compiling.Transform,
         Parsing.Ast,
         Parsing.Parser,
         Typing.Ast,
@@ -50,7 +59,10 @@ library
         Typing.NodeVarEnv,
         Typing.TypeExpr,
         Typing.TypeNode,
-        Typing.TypeUnification
+        Typing.TypeUnification,
+        Verilog.Ast,
+        Verilog.BaseLibrary,
+        Verilog.Verilog
 
     default-extensions: Safe
 
@@ -61,7 +73,8 @@ library
         megaparsec >= 9.7.0 && < 9.8,
         mtl >= 2.3.1 && < 2.4,
         text >= 2.1.1 && < 2.2,
-        parser-combinators >= 1.3.0 && < 1.4
+        parser-combinators >= 1.3.0 && < 1.4,
+        prettyprinter >= 1.7.1 && < 1.8,
 
     hs-source-dirs:   src
     default-language: Haskell2010
@@ -71,7 +84,8 @@ executable LustreVerilog
     main-is:          Main.hs
 
     other-modules:
-        ExportTyped
+        Paths_LustreVerilog
+
 
     default-extensions: Safe
 
@@ -85,21 +99,3 @@ executable LustreVerilog
 
     hs-source-dirs:   app
     default-language: Haskell2010
-
-test-suite IntegTest
-    import:           warnings
-    type:             exitcode-stdio-1.0
-    main-is:          Main.hs
-
-    -- Modules included in this executable, other than Main.
-    -- other-modules:
-
-    default-extensions: Safe
-
-    build-depends:
-        base >= 4.18 && < 5,
-        directory >= 1.3
-
-    hs-source-dirs:   test/integ
-    default-language: Haskell2010
-    build-tool-depends: LustreVerilog:LustreVerilog
