Added Bus operations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -133,12 +133,17 @@ endfunction()
 
 lustre_test(add)
 lustre_test(and)
+lustre_test(concat)
 lustre_test(eq)
 lustre_test(fby)
 lustre_test(if)
 lustre_test(neg)
 lustre_test(not)
 lustre_test(or)
+lustre_test(scmp)
+lustre_test(select)
+lustre_test(slice)
 lustre_test(sub)
+lustre_test(ucmp)
 
 verilog_test(verilog-playground)
