Ready for presentation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,6 +137,7 @@ lustre_test(concat)
 lustre_test(eq)
 lustre_test(fby)
 lustre_test(if)
+lustre_test(multiply)
 lustre_test(neg)
 lustre_test(not)
 lustre_test(or)
