--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -144,7 +144,10 @@ lustre_test(or)
 lustre_test(scmp)
 lustre_test(select)
 lustre_test(slice)
+lustre_test(slides-ex3)
 lustre_test(sub)
 lustre_test(ucmp)
 
 verilog_test(verilog-playground)
+verilog_test(slides-ex1)
+verilog_test(slides-ex2)
