--- a/LustreVerilog.cabal
+++ b/LustreVerilog.cabal
@@ -21,10 +21,6 @@ extra-doc-files:
 data-dir:           stdlib
 data-files:         *.v
 
-source-repository head
-  type:     git
-  location: https://github.com/desfreng/LustreVerilog/
-
 common warnings
     ghc-options: -Wall -Wextra
 
@@ -40,13 +36,20 @@ library
         Commons.Ids,
         Commons.Position,
         Commons.Tree,
+        Commons.Size,
         Commons.Types,
-        Commons.TypingError,
+        Commons.Error,
         Compiling.Ast,
         Compiling.ToVerilog,
         Compiling.Transform,
         Parsing.Ast,
-        Parsing.Parser,
+        Parsing.LexAction,
+        Parsing.Commons,
+        Parsing.ParsingMonad,
+        Parsing.Lexer,
+        Parsing.ParsingUtils,
+        Parsing.RevList,
+        Parsing.Grammar,
         Typing.Ast,
         Typing.CheckAtomicExpr,
         Typing.Environments,
@@ -54,24 +57,37 @@ library
         Typing.MonadUnif,
         Typing.NodeEnv,
         Typing.NodeVarEnv,
+        Typing.SizeEnv,
         Typing.TypeExpr,
         Typing.TypeNode,
         Typing.TypeUnification,
+        Typing.Intervals,
         Verilog.Ast,
         Verilog.BaseLibrary,
-        Verilog.Verilog
-
-    default-extensions: Safe
+        Verilog.Verilog,
+        Solver.Data,
+        Solver.Matrix,
+        Solver.Tableau,
+        Solver.Interface,
+        Solver.BranchAndBound,
+        Solver.Gauss,
+        Solver.VectorSpace
 
     build-depends:
-        base >= 4.18 && < 5,
-        bytestring >= 0.12.1 && < 0.13,
-        containers >= 0.7 && < 0.8,
-        megaparsec >= 9.7.0 && < 9.8,
-        mtl >= 2.3.1 && < 2.4,
-        text >= 2.1.1 && < 2.2,
-        parser-combinators >= 1.3.0 && < 1.4,
-        prettyprinter >= 1.7.1 && < 1.8,
+        base >= 4.20 && < 5,
+        array,
+        bytestring,
+        containers,
+        mtl,
+        text,
+        prettyprinter,
+        pretty-simple,
+        ratio-int,
+        vector,
+        
+    build-tool-depends:
+        alex:alex,
+        happy:happy
 
     hs-source-dirs:   src
     default-language: Haskell2010
@@ -86,14 +102,12 @@ executable LustreVerilog
     autogen-modules:
         Paths_LustreVerilog
 
-    default-extensions: Safe
-
     build-depends:
-        base >= 4.18 && < 5,
-        bytestring >= 0.12.1 && < 0.13,
-        text >= 2.1.1 && < 2.2,
-        optparse-applicative >= 0.18.1 && < 0.19,
-        pretty-simple >= 4.1.3 && < 4.2,
+        base,
+        bytestring,
+        text,
+        optparse-applicative,
+        pretty-simple,
         LustreVerilog
 
     hs-source-dirs:   app
